Refactored batch size.

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,4 @@ fabric.properties
 /chroma_instance/dataset/raw/
 /chroma_instance/logs/
 /chroma_instance/result/
+/chroma_instance/weights/chroma_instance/
